feat(monitoring): implement phase 2 - sentry, analytics, performance monitoring

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,47 @@
-# Gemini API Key (deprecated - use OpenRouter instead)
-# GEMINI_API_KEY=your_gemini_api_key_here
 
-# OpenRouter API Key (required for AI features)
-# Get your key at: https://openrouter.ai/keys
-VITE_OPENROUTER_API_KEY=your_openrouter_api_key_here
+# ==================================
+# Application
+# ==================================
+NODE_ENV=production
+VITE_APP_VERSION=2.0.0
+VITE_APP_NAME=AstroLeads
 
-# Supabase Configuration
-VITE_SUPABASE_URL=https://ueoexgznqqynujndvcve.supabase.co
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+# ==================================
+# Supabase
+# ==================================
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key-here
 
-# Optional: Other API keys for integrations
-# HUNTER_API_KEY=your_hunter_api_key
-# APOLLO_API_KEY=your_apollo_api_key
-# APIFY_API_KEY=your_apify_api_key
+# ==================================
+# AI Services
+# ==================================
+VITE_GEMINI_API_KEY=your-gemini-key-here
+VITE_OPENROUTER_API_KEY=your-openrouter-key
+
+# ==================================
+# Monitoring & Analytics
+# ==================================
+VITE_SENTRY_DSN=https://xxx@sentry.io/xxx
+VITE_POSTHOG_KEY=phc_xxxx
+VITE_MIXPANEL_TOKEN=xxxx
+
+# ==================================
+# Feature Flags
+# ==================================
+VITE_FEATURE_AI_STUDIO=true
+VITE_FEATURE_ADVANCED_ANALYTICS=true
+VITE_FEATURE_TEMPLATE_LIBRARY=true
+
+# ==================================
+# Security
+# ==================================
+REDIS_PASSWORD=your-redis-password
+GRAFANA_PASSWORD=your-grafana-password
+
+# ==================================
+# CI/CD
+# ==================================
+SNYK_TOKEN=your-snyk-token
+CODECOV_TOKEN=your-codecov-token
+RAILWAY_STAGING_WEBHOOK=https://xxx
+RAILWAY_PRODUCTION_WEBHOOK=https://xxx
