--- a/package.json
+++ b/package.json
@@ -18,40 +18,45 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@sentry/react": "^10.30.0",
+    "@sentry/tracing": "^7.120.4",
+    "@supabase/supabase-js": "^2.39.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
+    "mixpanel-browser": "^2.72.0",
+    "posthog-js": "^1.306.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "lucide-react": "^0.294.0",
     "recharts": "^2.10.3",
-    "zustand": "^4.4.7",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^2.1.0",
+    "web-vitals": "^5.1.0",
     "zod": "^3.22.4",
-    "@supabase/supabase-js": "^2.39.0"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
+    "@testing-library/jest-dom": "^6.1.6",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "tailwindcss": "^3.3.6",
-    "postcss": "^8.4.32",
+    "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/ui": "^1.1.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "prettier": "^3.1.1",
-    "vitest": "^1.1.0",
-    "@vitest/coverage-v8": "^1.1.0",
-    "@vitest/ui": "^1.1.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.6",
-    "@testing-library/user-event": "^14.5.1",
     "jsdom": "^23.0.1",
-    "@playwright/test": "^1.40.1"
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vitest": "^1.1.0"
   }
 }
