--- a/package.json
+++ b/package.json
@@ -54,9 +54,12 @@
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-pwa": "^1.2.0",
     "vitest": "^1.1.0"
   }
 }
