fix: Add missing status configurations to StatusBadge component
- Added support for 'working', 'idle', and 'paused' statuses
- Fixes undefined config error on Agents page
- Added Supabase agents tables migration and seed data
- Updated environment configuration and settings

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,13 @@ VITE_GEMINI_API_KEY=your-gemini-key-here
 VITE_OPENROUTER_API_KEY=your-openrouter-key
 
 # ==================================
+# Lead Generation Services
+# ==================================
+VITE_HUNTER_API_KEY=your-hunter-io-key
+VITE_PHANTOMBUSTER_API_KEY=your-phantombuster-key
+VITE_NEWS_API_KEY=your-newsapi-key
+
+# ==================================
 # Monitoring & Analytics
 # ==================================
 VITE_SENTRY_DSN=https://xxx@sentry.io/xxx
