docs: Add Resend setup guide and improve email error handling
- Created comprehensive RESEND_SETUP.md with step-by-step instructions
- Added configuration notes to .env.example for Resend API key
- Enhanced error messages in emailService.ts to guide users
- Helps resolve 'Failed to fetch' errors when sending emails

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,14 @@ VITE_PHANTOMBUSTER_API_KEY=your-phantombuster-key
 VITE_NEWS_API_KEY=your-newsapi-key
 
 # ==================================
+# Email Service (Resend)
+# ==================================
+# IMPORTANT: RESEND_API_KEY must be configured in Supabase Edge Functions Secrets
+# NOT as an environment variable here. See RESEND_SETUP.md for instructions.
+# Dashboard: https://supabase.com/dashboard → Edge Functions → Secrets
+# Add secret: RESEND_API_KEY=re_your_key_here
+
+# ==================================
 # Monitoring & Analytics
 # ==================================
 VITE_SENTRY_DSN=https://xxx@sentry.io/xxx
