--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@sentry/react": "^10.30.0",
     "@sentry/tracing": "^7.120.4",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/papaparse": "^5.5.2",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "mixpanel-browser": "^2.72.0",
+    "papaparse": "^5.5.3",
     "posthog-js": "^1.306.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
